--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/* these all apply to the body element -> global rules */
-
 * {
     border: none;
     padding: 0;
@@ -17,7 +15,7 @@ body {
   color: white;
 }
 
-/* main header rules */
+
 header {
     background-color: rgb(0, 140, 255);
     position: sticky;
@@ -27,7 +25,7 @@ header {
 
 #main-logo { width: 300px; padding: 10px 0; }
 
-/* main rules here */
+
 #character_nav {
     text-align: center;
     background-color:  rgba(68, 60, 11, 0.719);
@@ -81,15 +79,14 @@ header {
 
 article { padding: 20px; }
 
-/* select the h3 tag inside the article tag on the page */
-/* a selector followed by a space and then ANOTHER selector gets a reference to the parent element and then the child element or elements inside of it */
+
 article h3  {
     font-size: 2em;
     text-align: center;
     margin-bottom: 14px;
 }
 
-/* select the p tag inside the article tag on the page */
+
 article p {
     width: 80%;
     font-size: 18px;
@@ -113,7 +110,7 @@ article p {
 
 .sprite:hover { background-position-y: -150px !important; }
 
-/* footer rules here */
+
 footer {
     color: white;
     padding: 20px 0;
@@ -128,11 +125,10 @@ footer {
     background-color: rgb(40, 37, 37);
 }
 
-/* lightbox rules here */
 
 .lightbox { 
-    width: 100vw; /* vw = viewport width => screen width */
-    height: 100vh; /* vh = viewport height => screen height */
+    width: 100vw; 
+    height: 100vh; 
 
     position: absolute;
     top: 0;
@@ -142,7 +138,7 @@ footer {
     background-image: url('../images/McQueen_lightbox.png');
     background-repeat: no-repeat;
 
-    background-size: 55vh; /* 55% of the viewport height */
+    background-size: 55vh;
     background-position: 70px center;
 
     z-index: 5000;
@@ -197,5 +193,5 @@ footer {
     padding-top: 2em;
 }
 
-/* turn the lightbox on using the :target pseudo selector */
+
 .lightbox:target { display: block; }
